womtool/src/test/resources/validate/wdl_draft2/invalid/missing_input/missing_input.wdl
workflow missing_input {
  meta {
    description: "Equivalent to the valid 'needs_an_input' case, except that we provide an inputs JSON which is insufficient."
  }

  Int x
}
